--- a/final_paper.qmd
+++ b/final_paper.qmd
@@ -129,7 +129,7 @@ eighteen = StormEvents_details.ftp_v1.0_d2018_c20240716
 
 ## Data Cleaning
 
-In order to analyze the data from our years of interest, 2008,2013,2018, we filtered the csv files to only include events that involved wind since that was what was of interest to us. Since we were only looking at between wind event devastation and  time, location, and wind magnitude we removed all the columns that included data that did not contribute to these categories. There was a lot of missing data so in order to deal with that we removed all rows that had an NA in the columns of event type, state, month, magnitude and latitude because these columns were important when making the model. In addition if there were NA values in any of the devastation columns we replaced it with the value of 0 and made the assumption that if the value was not filled out no damage or injuries occurred.
+In order to analyze the data from our years of interest, 2008,2013,2018, we filtered the csv files to only include events that involved wind since that was what was of interest to us. Since we were only looking at between wind event devastation and  time, location, and wind magnitude we removed all the columns that included data that did not contribute to these categories. There was a lot of missing data so in order to deal with that we removed all rows that had an NA in the columns of event type, state, month, magnitude and latitude because these columns were important when making the model. In addition if there were NA values in any of the devastation columns we replaced it with the value of 0 and made the assumption that if the value was not filled out no damage or injuries occurred. 
 
 ```{r}
 clean_data = function(data) {
@@ -222,11 +222,8 @@ write.csv(combined_data,"ML_wind_data.csv", row.names = FALSE)
 ## Data Visualizations
 
 **Wind Devastation Categorization**
-<<<<<<< HEAD
+
 Our first set of plots were created to visualize the wind devastation categorization created to quantify extreme wind events based on deaths, injuries, and damages as mentioned above. The distribution of wind devastation is then broken down by year, month, and event type as some of our predictor variables.
-=======
-We used the ggplot2 package to create our histograms and bar plots. Our first set of plots were created to visualize the wind devastation categorization created to quantify extreme wind events based on deaths, injuries, and damages as mentioned above. The distribution of wind devastation is then broken down by year, month, and event type as some of our predictor variables.
->>>>>>> 70cee1d (Add final paper rendered)
 
 ```{r}
 data <- read.csv("ML_wind_data.csv")
@@ -237,11 +234,7 @@ library(ggplot2)
 ```{r}
 ggplot(data, aes(x = scaled_aggregate)) +
   geom_histogram(fill = "darkmagenta", color = "black") + 
-<<<<<<< HEAD
-  labs(x = "Wind Devastation Categorization", y = "Count", fill = "Year", title = "Histogram of the Wind Devastation\nCategorization", caption = "Data from NOAA storm events database from 2008, 2013, and 2018", subtitle = "The majority of events had no devastation followed by\nminimal devastation.") +
-=======
   labs(x = "Wind Devastation Categorization", y = "Count", title = "Histogram of the Wind Devastation\nCategorization", caption = "Data from NOAA storm events database from 2008, 2013, and 2018", subtitle = "The majority of events had no devastation followed by\nminimal devastation.") +
->>>>>>> 70cee1d (Add final paper rendered)
   theme_minimal() +
   theme(plot.title = element_text(size = 21, face = "bold"), 
     plot.subtitle = element_text(size = 17), 
@@ -268,20 +261,16 @@ ggplot(data, aes(x = scaled_aggregate, fill = factor(YEAR))) +
 ```
 
 ```{r}
-<<<<<<< HEAD
-ggplot(data, aes(x = scaled_aggregate, fill = factor(MONTH_NAME))) +
-  geom_histogram(binwidth = (max(data$scaled_aggregate, na.rm = TRUE) - min(data$scaled_aggregate, na.rm = TRUE)) / 15, 
-                 alpha = 0.6, position = "dodge", boundary = 0)   + labs(x = "Wind Devastation Categorization", y = "Count", fill = "Year", title = "Histogram of the Devastation Categorization\ngrouped by month", caption = "Data from NOAA storm events database from 2008, 2013, and 2018", subtitle = "Events during summer months appear to cause the most\ndevastation.") +
-=======
-#order the months
+#order months
 data$MONTH_NAME <- factor(data$MONTH_NAME, 
-                          levels = c("January", "February", "March", "April", "May", "June",
-                                     "July", "August", "September", "October", "November", "December"))
+                          levels = c("January", "February", 
+                                     "March", "April", "May", 
+                                     "June", "July", "August", "September", "October", 
+                                     "November", "December"))
 
 ggplot(data, aes(x = scaled_aggregate, fill = factor(MONTH_NAME))) +
   geom_histogram(binwidth = (max(data$scaled_aggregate, na.rm = TRUE) - min(data$scaled_aggregate, na.rm = TRUE)) / 15, 
                  alpha = 0.6, position = "dodge", boundary = 0)   + labs(x = "Wind Devastation Categorization", y = "Count", fill = "Month", title = "Histogram of the Devastation Categorization\ngrouped by month", caption = "Data from NOAA storm events database from 2008, 2013, and 2018", subtitle = "Events during summer months appear to cause the most\ndevastation.") +
->>>>>>> 70cee1d (Add final paper rendered)
   theme_minimal() +
   theme(plot.title = element_text(size = 21, face = "bold"), 
     plot.subtitle = element_text(size = 17), 
@@ -296,11 +285,7 @@ ggplot(data, aes(x = scaled_aggregate, fill = factor(MONTH_NAME))) +
 ```{r}
 ggplot(data, aes(x = scaled_aggregate, fill = EVENT_TYPE)) +
   geom_histogram(binwidth = (max(data$scaled_aggregate, na.rm = TRUE) - min(data$scaled_aggregate, na.rm = TRUE)) / 15, 
-<<<<<<< HEAD
-                 alpha = 0.6, position = "dodge", boundary = 0, color = "black")   + labs(x = "Wind Devastation Categorization", y = "Count", fill = "Year", title = "Histogram of the Devastation Categorization\ngrouped by event type", caption = "Data from NOAA storm events database from 2008, 2013, and 2018", subtitle = "Majority of the data is from thunderstorm wind events.") +
-=======
                  alpha = 0.6, position = "dodge", boundary = 0, color = "black")   + labs(x = "Wind Devastation Categorization", y = "Count", fill = "Event Type", title = "Histogram of the Devastation Categorization\ngrouped by event type", caption = "Data from NOAA storm events database from 2008, 2013, and 2018", subtitle = "Majority of the data is from thunderstorm wind events.") +
->>>>>>> 70cee1d (Add final paper rendered)
   theme_minimal() +
   theme(plot.title = element_text(size = 19, face = "bold"), 
     plot.subtitle = element_text(size = 15), 
@@ -315,6 +300,7 @@ ggplot(data, aes(x = scaled_aggregate, fill = EVENT_TYPE)) +
 These plots show that no devastation is the most common, then minimal and most devastation. With aggregation, the higher 4 categories have similar trends in year, month, and event type with more wind devastation occurring in the summer and 2008 and the even type being mostly thunderstorm wind. However, the no devastation category has a higher frequency in 2018 with some marine thunderstorm wind events also more in the summer months. These trends can be used in the machine learning model for extreme wind event devastation prediction.
 
 **Predictor Variables**
+
 Our second set of plots were created to visualize the machine learning model predictors to assess trends. The predictor variables used were state, month, wind speed, and year.
 
 ```{r}
@@ -335,12 +321,6 @@ ggplot(data, aes(x = STATE)) +
 ```
 
 ```{r}
-data$MONTH_NAME <- factor(data$MONTH_NAME, 
-                          levels = c("January", "February", 
-                                     "March", "April", "May", 
-                                     "June", "July", "August", "September", "October", 
-                                     "November", "December"))
-
 ggplot(data, aes(x = MONTH_NAME)) +
   geom_bar(fill = "deepskyblue2", color = "black") +
   labs(title = "Number of Extreme Wind Events by Month", caption = "Data from NOAA storm events database from 2008, 2013, and 2018",
@@ -390,7 +370,7 @@ ggplot(data, aes(x = YEAR)) +
     axis.text.y = element_text(size = 17))
 ```
 
-These plots show more extreme wind events in midwestern and some southern states, in summer months and 2008 as seen previously, and with wind speeds around 50 knots ranging from 0 to 120 knots. Overall these variables will be useful predictors for our machine learning model.
+These plots show more extreme wind events in Midwestern and some southern states, in summer months and 2008 as seen previously, and with wind speeds around 50 knots ranging from 0 to 120 knots. Overall these variables will be useful predictors for our machine learning model.
 
 **Variables in Wind Devastation Categorization**: Zero Counts and Non-Zero Frequencies
 
