--- a/final_paper.qmd
+++ b/final_paper.qmd
@@ -708,19 +708,17 @@ importance
 
 ```
 
-## What We Learned
+## What We Learned: Conclusion and Future Directions
 
-After completing the data visualization it can concluded that the majority of the events being analyzed had no devastation followed by minimal devastation. It can be seen that the distribution of devastation was pretty similar in all 3 years analyzed with 2008 having a little bit more devastation in the minimal, low, moderate and most devastation categories. When looking at the amount of devastation by month the summer months experienced the most amount of devastation. 
+After completing the data visualization it can concluded that the majority of the events being analyzed had no devastation followed by minimal devastation. It can be seen that the distribution of devastation was pretty similar in all 3 years analyzed with 2008 having a little bit more devastation in the minimal, low, moderate and most devastation categories. When looking at the amount of devastation by month the summer months experienced the most amount of devastation. 
 
-In the end, our model with the best hyperparameters had an accuracy of 0.6898446 and a kappa value – which measures how much better our model is than random chance (on a scale from 0 to 1) – of 0.4593361. The most important features in the model were wind magnitude and the state the event took place in. The least important features were changes in latitude and longitude, but that could be due to the fact that many wind events did not record changes in latitude and longitude. Still, our model was better than would be expected from random chance, indicating that the answer to the question motivating our paper is yes: we can model wind event devastation using storm characteristics.
-
-## Conclusion and Future Directions
+In the end, our model with the best hyperparameters had an accuracy of 0.6898446 and a kappa value – which measures how much better our model is than random chance (on a scale from 0 to 1) – of 0.4593361. The most important features in the model were wind magnitude and the state the event took place in. This makes sense, as higher wind magnitude would likely lead to more damage and present a higher danger to civilians. State being an important feature maybe due to the differences in population structures/concentrations and the amount of crops/vulnerable buildings. It could also be a result of certain states being prone to higher wind magnitudes/more extreme storms. The least important features were changes in latitude and longitude, but that could be due to the fact that many wind events did not record changes in latitude and longitude. Still, our model was better than would be expected from random chance, indicating that the answer to the question motivating our paper is yes: we can model wind event devastation using storm characteristics.
 
 These results indicate that our statistic for wind categorization can be predicted from our predictors, and that future work can be done to improve the model. This may include using different machine learning models and testing our model on different wind datasets to improve and test accuracy. One might also try different strategies for handling missing data – we chose to list everything missing in the devastation categorization as zero, but perhaps there are better strategies for this.
 
 ## Final Analytic Product: Website
 
-Our final analytic product is a public-facing website. It includes 4 pages: About, Data Visualizations, Wind Devastation, and ML Model. The background page describes our goal, background, and main takeaways. The objective of the data visualizations page is to help readers understand our dataset. It includes visualizations of the distributions of the variables used to create the wind devastation categorization and the predictor variables in the ML model. Further, we hope to visualize the relationship between the wind devastation categorization and a few variables to help motivate the machine learning model.  As our target audience is the general public, we have chosen to describe the data download/data cleaning and calculation of the wind event categorization statistic instead of showing all of the code. This is in the Wind Devastation page. We decided to show the full derivation of the machine learning model with simplified annotations to make it simultaneously digestible for readers not familiar with machine learning and helpful for future researchers wanting to build off of our work.
+Our final analytic product is a public-facing website. It includes 4 pages: About, Data Visualizations, Wind Devastation, and ML Model. The background page describes our goal, background, and main takeaways. The objective of the data visualizations page is to help readers understand our dataset. It includes visualizations of the distributions of the variables used to create the wind devastation categorization and the predictor variables in the ML model. Further, we hope to visualize the relationship between the wind devastation categorization and a few variables to help motivate the machine learning model. As our target audience is the general public, we have chosen to describe the data download/data cleaning and calculation of the wind event categorization statistic instead of showing all of the code. This is in the Wind Devastation page. We decided to show the full derivation of the machine learning model with simplified annotations to make it simultaneously digestible for readers not familiar with machine learning and helpful for future researchers wanting to build off of our work.
 
 ## Links
 
@@ -738,4 +736,4 @@ Website: <https://cassiecchou.quarto.pub/team-windows-website/>
 
 -   Diaz, Jeremy, and Maxwell B. Joseph. “Predicting property damage from tornadoes with zero-inflated neural networks.” Weather and Climate Extremes, vol. 25, Sept. 2019, p. 100216, <https://doi.org/10.1016/j.wace.2019.100216>.
 
--   “FAR AFIELD: Researchers Seek out and Study Tornadoes and Severe Weather.” NSSL News, 31 Jan. 2024, [inside.nssl.noaa.gov/nsslnews/2024/01/far-afield-researchers-seek-out-and-study-tornadoes-and-severe-weather/](http://inside.nssl.noaa.gov/nsslnews/2024/01/far-afield-researchers-seek-out-and-study-tornadoes-and-severe-weather/). 
+-   “FAR AFIELD: Researchers Seek out and Study Tornadoes and Severe Weather.” NSSL News, 31 Jan. 2024, [inside.nssl.noaa.gov/nsslnews/2024/01/far-afield-researchers-seek-out-and-study-tornadoes-and-severe-weather/](http://inside.nssl.noaa.gov/nsslnews/2024/01/far-afield-researchers-seek-out-and-study-tornadoes-and-severe-weather/).
